# auto-trader

./: Caddyfile  NOTES.md  README.md  modified-script.pine  original-script.pine
backend/: .dockerignore  .env.example  Dockerfile  compose.local.yaml  compose.yaml  entrypoint.local.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0124ced9b4ca_initial.py  033c19b514c3_add_description_field_to_logs_model.py  0bb3db603d97_initial_migration.py  0cf7e4f7e00a_update_log_model.py  12e4948250f5_remove_position_size_field_from_.py  1503c8d293c3_update_user_fields.py  257ebbc19800_add_orders_model.py  2d62d25a9fb1_add_deal_id_field_to_order_model.py  31625bb15b0e_remove_maximum_trades_per_instrument_.py  3704f3e74d7e_add_user_id_field_to_order_model.py  40cc3ebc7e7d_add_identifier_field_to_log_model.py  427a819a66f8_make_order_instrument_relationship_one_.py  4e581d65baee_add_is_open_field_to_order_model.py  51d1616ceb42_remove_unique_constraint_from_order_.py  5364707e1646_add_appsettings_model.py  54b653a0c812_add_last_alert_received_at_field_to_.py  603f69c7fdf1_remove_auto_updating_last_login_field_.py  7643b7a018d9_increate_deal_reference_field_length_in_.py  88ced0384de6_modify_instrument_max_position_size_to_.py  8c1acc2b153b_initial_migration.py  978ec253b3d2_add_trading_view_price_multiplier_field_.py  ce5da03d3ee8_initial_migration.py  df649c1b5a15_initial_migration.py  e56fc82e4f41_initial_migration.py  e8c34de45593_initial_migration.py  ef18b3f81a58_initial_migration.py  ef84bafff2d9_initial_migration.py  f5036ee13c64_add_more_fields_to_user_settings_model.py  f7c955738327_add_spreadbet_account_id_field_to_user_.py
backend/app/: commands.py  config.py  main.py  tasks.py
backend/app/api/: auth.py  exceptions.py  helpers.py  instruments.py  orders.py  users.py  webhook.py
backend/app/api/helpers/: ig_utils.py  orders_parser.py  positions_parser.py  webhook_payload_parser.py
backend/app/api/routes/: admin.py  auth.py  instruments.py  logs.py  orders.py  positions.py  stats.py  users.py  webhook.py
backend/app/api/schemas/: alert.py  app_settings.py  generic.py  instruments.py  orders.py  positions.py  stats.py  user.py  user_settings.py  webhook.py
backend/app/api/utils/: admin.py  authentication.py  caching.py  filters.py  ig_client.py  (+1 more)
backend/app/db/: crud.py  deps.py  enums.py  models.py  session.py
backend/app/lib/: cache.py
backend/app/parsers/: alert.py
backend/app/schemas/: alert.py  instruments.py  logs.py  orders.py  positions.py  stats.py  user_settings.py  webhook.py
backend/app/services/: dividend_dates.py  email.py  fetch_dividend_dates.py  logging.py  order_fulfillment.py  utils.py
backend/app/tasks/: broker.py  scheduled.py
backend/app/templates/: reset_password.html
backend/app/tests/: stress_testing.py
(+175 files in other folders)
