[project]
name = "autotrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache==0.12.3",
    "aiofiles==24.1.0",
    "aiolimiter==1.2.1",
    "aiosmtplib==3.0.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "curl-cffi==0.12.0",
    "decorator==5.2.1",
    "dnspython==2.7.0",
    "dramatiq[redis]==1.18.0",
    "email-validator==2.2.0",
    "executing==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.4",
    "fastapi-mail==1.5.0",
    "fastcrud==0.15.12",
    "frozendict==2.4.6",
    "gevent==25.5.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "multitasking==0.0.12",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "parso==0.8.4",
    "passlib==1.7.4",
    "peewee==3.18.2",
    "pendulum==3.1.0",
    "periodiq==0.13.0",
    "pika==1.3.2",
    "platformdirs==4.3.8",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rfc3986==1.5.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "rignore==0.6.2",
    "ruff==0.12.4",
    "sentry-sdk==2.33.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqlalchemy-utils==0.41.2",
    "stack-data==0.6.3",
    "starlette==0.47.1",
    "tenacity==9.1.2",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchdog==6.0.0",
    "watchdog-gevent==0.2.1",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yfinance==0.2.65",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]
